samples/_failures_safe/1761280450_d6c004_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0e69c82.c: In function ‘main’:
./samples/SAFE/__tmp_d0e69c82.c:132:12: error: missing terminating " character
  132 |     printf("0: Add\n1: Subtract\n2: Multiply\n3: Transpose
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d0e69c82.c:132:5: error: expected expression at end of input
  132 |     printf("0: Add\n1: Subtract\n2: Multiply\n3: Transpose
      |     ^~~~~~
./samples/SAFE/__tmp_d0e69c82.c:132:5: error: expected declaration or statement at end of input
